# aqua_api_client_rs

./: Cargo.toml  README.md  akvareg.json  build.rs  dist-workspace.toml  fish_health_openapi.json  lice.csv  output.csv  paths.json  vessel.csv  vessel_list.csv
schema/: akvakulturregister.json  fish_health.json
src/: client.rs  error.rs  fish_health.rs  lib.rs  vessel.rs
src/adapters/: mod.rs
src/adapters/gui/: app.rs  lice_app.rs  mod.rs  xilem.rs
src/adapters/repository/: akvareg_repo.rs  bw_repo.rs  mod.rs
src/adapters/storage/: csv.rs  mod.rs  postgres.rs
src/application/: mod.rs  services.rs
src/domain/: api.rs  entity.rs  license.rs  mod.rs  site.rs
src/domain/barentswatch/: api_config.rs  combined.rs  lice.rs  localities.rs  mod.rs  updated.rs  vessel.rs
wix/: main.wxs
