[package]
name = "barentswatch_rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/EmilLindfors/aqua_api_client_rs.git"

[dependencies]
chrono =  {version = "0.4.39", features = ["serde"]}
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
csv = "1.3"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.3"

[[bin]]
name = "barentswatch_rs"
path = "bin/cli.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
